[package]
name        = "cps_compiler"
version     = "0.1.0"
authors     = ["Robert Jacobson <rljacobson@gmail.com>"]
edition     = "2018"
description = "Some recreational experimentation with continuation passing style."
publish     = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]



[dependencies]
#saucepan = {path= "../../saucepan"}
#strum = { version = "0.21", features = ["derive"] }
ahash = "0.7.4" # A faster hash function for `HashMap`
